@@ -212,9 +212,9 @@
 <toolbox id="tool-box">
   <toolbar id="tool-bar">
     <toolbarbutton id="sugar-button-options" oncommand="openSugarOptionsMenu()"/>
-    <toolbarbutton id="button-home" oncommand="goHome()" tooltiptext="&main.home;"/>
-    <toolbarbutton id="button-back" oncommand="pageBack()" tooltiptext="&main.back;"/>
-    <toolbarbutton id="button-next" oncommand="pageNext()" tooltiptext="&main.forward;"/>
+    <toolbarbutton id="button-home" oncommand="goHome(isCtrlDown())" tooltiptext="&main.home;"/>
+    <toolbarbutton id="button-back" oncommand="pageBack(isCtrlDown())" tooltiptext="&main.back;"/>
+    <toolbarbutton id="button-next" oncommand="pageNext(isCtrlDown())" tooltiptext="&main.forward;"/>
     <toolbarbutton id="sugar-button-display" oncommand="toggleSugarDisplayBar()" />
     <toolbarbutton id="button-sizeup" oncommand="zoomIn()" tooltiptext="&main.zoomin;"/>
     <toolbarbutton id="button-sizedown" oncommand="zoomOut()" tooltiptext="&main.zoomout;"/>
